[tool.poetry]
name = "kud"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.4.5"
werkzeug = "^1.0.1"
flask = "^1.1.2"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
